--- a/TZSmartLockers/wwwroot/css/base.css
+++ b/TZSmartLockers/wwwroot/css/base.css
@@ -99,7 +99,7 @@ a {
     border-bottom: 2px solid @border-color;
     background-color: rgba(0, 0, 0, 0);
     border-style: solid !important;
-    margin-top: 15px;
+    margin-top: -2px;
     margin-bottom: 15px;
 }
 
